@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="skin.tetradui" version="1.3.5" name="TetradUI" provider-name="Jezz_X, TeamUI">
+<addon id="skin.tetradui" version="1.3.6" name="TetradUI" provider-name="Jezz_X, TeamUI">
   <requires>
     <import addon="xbmc.gui" version="5.15.00" />
 	<import addon="script.embuary.helper" version="2.0.2"/>
@@ -10,7 +10,7 @@
   <extension point="xbmc.addon.metadata">
     <platform>all</platform>
     <license>Creative Commons Attribution-Share Alike 3.0 United States</license>
-    <forum>https://forum.kodi.tv/forumdisplay.php?fid=182</forum>
+    <forum>https://forum.kodi.tv/forumdisplay.php?fid=318</forum>
     <website>https://kodi.wiki/view/Add-on:TetradUI</website>
     <source>https://github.com/gade01/skin.tetradui</source>
     <assets>
@@ -28,7 +28,7 @@
       <screenshot>resources/screenshot-09.png</screenshot>
       <screenshot>resources/screenshot-10.png</screenshot>
     </assets>
-    <news>[B]1.3.5[/B][CR]- Recode video calibration window[CR]- Bugfixes</news>
+    <news>[B]1.3.6[/B][CR]- Fix album and song information window play button</news>
     <summary lang="da_DK">TetradUI er et skin til Kodi mediecenter</summary>
     <summary lang="en_GB">TetradUI is a skin add-on for Kodi media center</summary>
     <summary lang="es_ES">TetradUI es un Add-on de skin para el centro multimedia Kodi</summary>
