@@ -1,3 +1,6 @@
+[B]Version 1.3.6[/B]
+- Fix album and song information window play button
+
 [B]Version 1.3.5[/B]
 - Recode video calibration window
 - Bugfixes
